# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\User\UserController;
 use App\Http\Controllers\Knowledge\KnowledgeController;
 use App\Http\Controllers\EventCategoryController;
+use App\Http\Controllers\MessageController;
 use App\Http\Controllers\V1\AuthController;
 /*
 |--------------------------------------------------------------------------
@@ -27,8 +28,10 @@ Route::group(['middleware' => 'api','prefix' => 'user'], function () {
 
 });
 
+
+Route::get('messages', [MessageController::class, 'index']);
 Route::resource('knowledges', KnowledgeController::class);
-Route::get('events/categories', [EventCategoryController::class, 'list']);
+Route::get('events/categories', [EventCategoryController::class, 'index']);
 Route::post('events/categories', [EventCategoryController::class, 'create']);
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
